fix: Allow `9:16` aspect-ratio gallery to render without a gap in Safari (#1705)

--- a/src/scss/gallery.scss
+++ b/src/scss/gallery.scss
@@ -9,5 +9,5 @@ frigate-card-surround-basic {
   // modes, the surround height needs to be limited to something reasonable in
   // order for the media filter to still display somewhere the user can
   // easily/continually access.
-  max-height: 100dvh;
+  max-height: 110dvh;
 }
